/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.ProcessManager.Abstractions.Contracts";

message NotifyOrchestrationInstanceV1 {
  string orchestration_instance_id = 1; // The id of the orchestration instance to notify.
  string event_name = 2; // The name of the notification event (example: "EnqueueActorMessagesCompleted").
  optional NotifyOrchestrationInstanceDataV1 data = 3; // Optional data for the notification event.
}

message NotifyOrchestrationInstanceDataV1 {
  string data = 1; // Data serialized as string.
  string data_type = 2; // Name of the data type (example: "EnqueueActorMessagesCompletedData").
  string data_format = 3; // Format the data field is serialized as (example: "application/json" etc.).
}
